fixed overflow issues

--- a/style4links.css
+++ b/style4links.css
@@ -16,14 +16,17 @@ body {
     justify-content: center;
     padding: 16px;
     margin: 0;
+    overflow: hidden;
 }
 
 .phonebody{
     position: relative;
-    top: -135px;
-    left: 52px;
+    top: -665px;
+    overflow:hidden;
     z-index: -1000;
-    scale: 2.25;
+    /*scale: 2.25;*/
+    width: 700px;
+    right: 2px;
 }
 
 /*  phone frame  */
@@ -33,10 +36,12 @@ body {
     background: #eeedeb;
     border-radius: 16px 16px 16px 16px;
     padding: 18px 16px 24px;
-    border: 5px solid #c46837;
+    border: 6px solid #c46837;
     position: relative;
-    top: 230px;
+    top: 108px;
     transition: all 0.2s;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* top bar  */
